--- a/Css/index.css
+++ b/Css/index.css
@@ -1,56 +1,105 @@
 
-
-    @font-face{
-        font-family: "botones_index";
-        src: url(fuente_botones.ttf);
-    }
-    
-    .boton {
-        border: 20px solid #C28269;
-    
-        border-bottom: -30px;
-        border-radius: 3px;
-        padding: 10px 10px;
-        background-color: ghostwhite;
-            opacity: 0.9;
-        color: black;
-        text-decoration: none; /*decoración texto*/
-        text-transform: uppercase; /*capitalización texto*/
-        font-family: "botones_index";
-        font-size: 25px;
-        text-align: center;
-        margin: 40 px;
-        width: 300px;
-        height:30px;
-        display: block;
-        position: relative;
-            left: 40%;
-            right: 40%;
-            top: 30%;
-            bottom: 30%;
-        }
-            
-        
+body {   
+    background-image: url(fondo_index.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
 
 @font-face {
-    font-family: "titulo_personalizado";
-    src: url(fuente_personalizada.ttf)  }
+    font-family: "titulopersonalizado";
+    src: url(fuentepersonalizada.otf) 
+ }
 
-#personalizado {
-    font-family: "titulo_personalizado";
-    color:#563E32;
+.personalizado {
+    font-family: "titulopersonalizado";
 }
 
 h1 {
-    text-align: center;
-    font-size: 60px;
+    text-align: left;
+    font-size: 70px;
+    color: black;
+    opacity: 0.9; 
+    display: inline;
+    padding: -2px;
+    border:30px  solid black; 
+    border-left:20px solid rgb(255, 255, 255);
+    border-right: 120px solid black;
+    border-bottom: 120px solid black;
+    border-radius: 6px;
+    position: absolute;
+        top: -40px;
+        left: 30px
+    
+    
+
+    
+}
+h2 {
+    text-align: left;
+    font-size: 80px;
+    color: yellow;
+    opacity: 0.9;
+    margin-top: -30px;
+    position: absolute;
+        top:160px;
+        left: 190px;
+    padding: 0%;
+    border-left: 10px solid yellow ;
+    border-right: 10px solid yellow;
+    border-radius: 2px;
 }
 
 
-body {   
-    background-image: url(index.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+
+@font-face{
+    text-decoration: none;
+    font-family: "botones_index";
+    src: url(fuente_botones.ttf);
+}
+
+
+
+.boton {
+    border: 20px solid white;
+    border-bottom: -30px;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 8px 4px;
+    background-color: rgb(255, 255, 255);
+        opacity: 0.9;
+    color: black;
+    text-decoration: none; /*decoración texto*/
+    text-transform: uppercase; /*capitalización texto*/
+    font-family: "botones_index";
+    font-size: 25px;
+    text-align: center;
+    width: 300px;
+    height:30px;
+    display: block;
+        box-shadow: 7px 7px 8px rgb(124, 122, 122);
+    position: relative;
+        left: 800px;
+        top:50px;
+
+        
+}
+
+
+a:link{
+    font-size: 25px;
+    color: black;
+}    
+a:visited {
+    font-size: 25px;
+    color: black;
+}
+a:active {
+    font-size: 25px;
+    color: black;
+}
+a:hover {
+    font-size: 25px;
+    color: black;
 }
 a{
     text-decoration: none;
