--- a/Css/pagmascotas.css
+++ b/Css/pagmascotas.css
@@ -1,5 +1,8 @@
 body {
-    background-image: url(fondo_pagmascotas.jpg);
+    background-image: url(fondo_pagmascota.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    
 }
 
 @font-face {
@@ -15,7 +18,7 @@ body {
     font-family: "botones_index";
 }
 h1 {
-    font-size: 60px;
+    font-size: 55px;
     display: inline;
     color: rgb(120, 11, 163);
     background-color: white;
@@ -24,6 +27,8 @@ h1 {
     border-left:15px solid rgb(120, 11, 163); 
     opacity: 0.9;
     margin: 5px;
+    position: relative;
+        top: 3px;
 }
 
 table {
@@ -39,7 +44,7 @@ table {
     font-size: 20px;
     box-shadow: 4px 4px 5px rgb(116, 58, 116);
     position: sticky;
-    top: 110px;
+        top: 100px;
 }
 
 th{
@@ -58,14 +63,64 @@ td{
 }
 
 .agregar {
-    background-color: whitesmoke;
+    border: 15px solid   rgb(136, 21, 182);
+    border-bottom: -30px;
+    border-radius: 3px;
+    margin: 4px;
+    padding: 6px 3px;
+    background-color: rgb(136, 21, 182);
+        opacity: 0.9;
+    color: white;
+    text-decoration: none; 
+    text-transform: uppercase; 
     font-family: "botones_index";
-    font-size: 20px;
-    box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
-    padding: 2px;
-    border: 8px solid white;
-    border-radius:6px;
+    font-size: 25px;
+    text-align: center;
+    width: 10%;
+    height:20px;
+    display: block;
+    box-shadow: 7px 7px 8px rgb(116, 58, 116);
     position: relative;
-        top:-15px;
-        left: 1200px
+        top:-45px;
+        left: 1200px;
+}
+
+strong{
+    font-family:"botones_index";
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 3px;
+    opacity: 0.8;
+    color: rgb(136, 21, 182);;
+    font-size: 24px;
+    position: relative;
+        left:630px;
+        top: 10px;
+
+}
+
+.mover {
+    position: relative;
+        left:750px;
+        top: -23px;
+    background-color: whitesmoke;
+    opacity: 0.9;
+    border: 5px solid whitesmoke;
+    border-radius: 4px;
+
+
+}
+
+
+.salir{
+    font-family: Impact;
+    color:#FFFF00;
+    font-size: 23px;
+    background-color: #00CCFF;
+    border: 7px solid #00CCFF;
+    border-radius: 2px;
+    position: relative;
+        top:100px;
+        left: 50px;
+        box-shadow: 4px 4px 5px rgb(95, 223, 255)
 }
