--- a/Css/pagpropietario.css
+++ b/Css/pagpropietario.css
@@ -20,11 +20,10 @@ h1 {
     font-size: 55px;
     display: inline;
     color:white;
-    background-color:#213242;
-    border: 7px solid #213242;
-    padding:6px solid #213242;
+    background-color:#013A67;
+    border: 7px solid #013A67;
+    padding:6px solid #013A67;
     border-left:15px solid white; 
-    opacity: 0.9;
     margin: 5px;
     position: relative;
         top: 3px;
@@ -47,9 +46,8 @@ table {
 }
 
 th{
-    background-color: #213242;
+    background-color: #013A67;
     color:white;
-    opacity: 0.8;
     font-size: 22px;
     border:1px solid white;
     box-shadow: 2px 2px 3px rgb(248, 246, 246);
@@ -62,13 +60,12 @@ td{
 }
 
 .agregar {
-    border: 15px solid  #213242;
+    border: 15px solid  #013A67;
     border-bottom: -30px;
     border-radius: 3px;
     margin: 4px;
     padding: 6px 3px;
-    background-color: #213242;
-        opacity: 0.8;
+    background-color: #013A67;
     color: white;
     text-decoration: none; 
     text-transform: uppercase; 
@@ -84,17 +81,56 @@ td{
         left: 1200px;
 }
 
+strong{
+    font-family:"botones_index";
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 3px;
+    opacity: 0.8;
+    color:#013A67;
+    font-size: 24px;
+    position: relative;
+        left:630px;
+        top: 10px;
+
+}
+.mover {
+    position: relative;
+        left:750px;
+        top: -23px;
+    background-color: whitesmoke;
+    opacity: 0.9;
+    border: 5px solid whitesmoke;
+    border-radius: 4px;
+
+
+}
+.salir{
+    display: inline;
+    font-family: Impact;
+    color:#96e2f3;
+    font-size: 23px;
+    background-color: #013A67;
+    border: 10px solid  #013A67;
+    border-radius: 2px;
+    width: 50px;
+    position: relative;
+        top: 60px;
+        left: 50px;
+    box-shadow: 4px 4px 5px rgb(6, 63, 138)
+}
 
 a:link {
     color: white;
-    text-decoration: none; 
-
+    text-decoration: none;
+    font-family: "botones_index"; 
 }
 
 a:visited {
 
     color: white;
     text-decoration: none; 
+    font-family: "botones_index"; 
 
 }
 
@@ -103,6 +139,22 @@ a:visited {
 a:active {
     color: white;
     text-decoration: none; 
+    font-family: "botones_index"; 
 
+
+}
+
+.pagina{
+    font-family:"botones_index";
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 3px;
+    opacity: 0.8;
+    color:#013A67;
+    font-size: 24px;
+    position: relative;
+        left:750px;
+        top: -25px;
+    display: inline;
 
 }
